# package

./: pyproject.toml
src/package_richard/substack/: util.py
